--- a/index.html
+++ b/index.html
@@ -10,18 +10,19 @@
     <span>City name: </span>
     <input id="input" type="text">
     <button onclick="buttonClick()">Show</button>
+    <div id="weather-container">
+
+    </div>
 
     <script id="weather-template" type="text/x-handlebars-template">
-        <div>
-            <h1>Weather in {{name}}</h1>
-            <ul>
-                <li>Temperture: {{main.temp}}</li>
-                <li>Pressure: {{main.pressure}}</li>
-                <li>Himidity: {{main.humidity}}</li>
-                <li>Clouds: {{clouds.all}}%</li>
-                <li>Wind speed: {{wind.speed}}</li>
-            </ul>
-        </div>
+        <h1>Weather in {{name}}</h1>
+        <ul>
+            <li>Temperture: {{main.temp}}</li>
+            <li>Pressure: {{main.pressure}}</li>
+            <li>Himidity: {{main.humidity}}</li>
+            <li>Clouds: {{clouds.all}}%</li>
+            <li>Wind speed: {{wind.speed}}</li>
+        </ul>
     </script>
 
 
