--- a/index.html
+++ b/index.html
@@ -10,19 +10,15 @@
     <span>City name: </span>
     <input id="input" type="text">
     <button onclick="buttonClick()">Show</button>
-    <div id="weather-container">
 
-    </div>
+    <div id="weather-container"></div>
 
     <script id="weather-template" type="text/x-handlebars-template">
         <h1>Weather in {{name}}</h1>
-        <ul>
-            <li>Temperture: {{main.temp}}</li>
-            <li>Pressure: {{main.pressure}}</li>
-            <li>Himidity: {{main.humidity}}</li>
-            <li>Clouds: {{clouds.all}}%</li>
-            <li>Wind speed: {{wind.speed}}</li>
-        </ul>
+        {{#each parameters}}
+            <div class="parameter-name">{{this.name}}</div>
+            <div class="parameter-value">{{this.value}}</div>
+        {{/each}}
     </script>
 
 
