--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="styles/styles.css">
     <script type="text/javascript" src="handlebars.min.js"></script>
 </head>
 
