HTML. Add div weather-parameters

--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
 
     <script id="weather-template" type="text/x-handlebars-template">
         <h1>Weather in {{city_name}}</h1>
-        {{#each parameters}}
-            <div class="parameter-name">{{name}}</div>
-            <div class="parameter-value">{{value}} {{{units}}}</div>
-        {{/each}}
+        <div class="weather-parameters">
+            {{#each parameters}}
+                <div class="parameter-name">{{name}}</div>
+                <div class="parameter-value">{{value}} {{{units}}}</div>
+            {{/each}}
+        </div>
     </script>
 
 
