HTML. Add div parameter

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
 
-        <span>City name: </span>
+        <h1>City name: </h1>
         <input id="input" type="text">
         <button onclick="buttonClick()">Show</button>
 
@@ -20,9 +20,11 @@
             <h1>Weather in {{city_name}}</h1>
             <div class="weather-parameters">
             {{#each parameters}}
-                <div class="parameter-name">{{name}}</div>
-                <div class="parameter-value">{{value}} {{{units}}}</div>
-                {{/each}}
+                <div class="parameter">
+                    <div class="parameter-name">{{name}}</div>
+                    <div class="parameter-value">{{value}} {{{units}}}</div>
+                </div>
+            {{/each}}
             </div>
         </script>
 
