Add new forecast data 'weather.decsription'

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div id="weather-container"></div>
 
         <script id="weather-template" type="text/x-handlebars-template">
-            <h1>Weather in {{city_name}}</h1>
+            <h1>Weather in {{city_name}} is {{main}}</h1>
             <div class="weather-parameters">
             {{#each parameters}}
                 <div class="parameter">
