CSS. Add some grids

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <div class="input-container">
-        <h1>City name: </h1>
+        <h1 id="input-label">City name: </h1>
         <input id="input" type="text">
         <button onclick="buttonClick()">Show</button>
     </div>
