CSS. Add font-size for input-button

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="input-container">
         <h1 id="input-label">City name: </h1>
         <input id="input" type="text">
-        <button onclick="buttonClick()">Show</button>
+        <button id="input-button" onclick="buttonClick()">Show</button>
     </div>
 
     <div id="weather-container"></div>
