Add changing browser tab accrodingly to forecast

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Weather</title>
+    <link id="favicon" rel="shortcut icon" type="image/png" href="" />
     <link rel="stylesheet" type="text/css" href="styles/styles.css">
     <script type="text/javascript" src="handlebars.min.js"></script>
 </head>
