--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <div id="weather-container"></div>
     <script id="weather-template" type="text/x-handlebars-template">
-        <h1>Weather in {{city_name}} is {{main}}</h1>
+        <h1>Weather in {{cityName}} is {{main}}</h1>
         <img src={{icon}}>
         <div class="weather-parameters">
         {{#each parameters}}
