--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="input-container">
         <h1 id="input-label">City name: </h1>
-        <form onsubmit="buttonClick(); return false;">
+        <form id="input-form">
             <input id="input" type="text">
             <input id="input-button" type="submit" value="Show">
         </form>
