--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </script>
 
 
-    <script type="text/javascript" src="src/index.js"></script>
+    <script type="text/javascript" src="main.js"></script>
 </body>
 
 </html>
